// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Basic Page 1`] = `
<DocumentFragment>
  <div
    style="height: 100vh; width: 100vw;"
  >
    <div
      class="Page-pageContainer Page-pageWithHeader Page-backgroundStandard"
    >
      <header
        class="Page-pageHeader Page-baseBar"
      >
        <ui5-bar
          design="Header"
          ui5-bar=""
        >
          <ui5-title
            level="H5"
            slot="middleContent"
            ui5-title=""
          >
            Page Demo
          </ui5-title>
          <ui5-button
            design="Transparent"
            icon="navigation-left-arrow"
            slot="startContent"
            ui5-button=""
          />
        </ui5-bar>
      </header>
      <section
        class="Page-contentSection"
        style="bottom: 0px;"
      >
        Page Content
      </section>
      <footer
        class="Page-pageFooter Page-baseBar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Basic Page w/o back button 1`] = `
<DocumentFragment>
  <div
    style="height: 100vh; width: 100vw;"
  >
    <div
      class="Page-pageContainer Page-pageWithHeader Page-backgroundStandard"
    >
      <header
        class="Page-pageHeader Page-baseBar"
      >
        <ui5-bar
          design="Header"
          ui5-bar=""
        >
          <ui5-title
            level="H5"
            slot="middleContent"
            ui5-title=""
          >
            Page Demo
          </ui5-title>
        </ui5-bar>
      </header>
      <section
        class="Page-contentSection"
        style="bottom: 0px;"
      >
        Page Content
      </section>
      <footer
        class="Page-pageFooter Page-baseBar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Page Without footer and Header 1`] = `
<DocumentFragment>
  <div
    class="Page-pageContainer Page-backgroundStandard"
  >
    <section
      class="Page-contentSection"
      style="bottom: 0px;"
    >
      Page Content
    </section>
  </div>
</DocumentFragment>
`;
